Expose admin metrics endpoint
